fix overflow issue

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -197,7 +197,7 @@ code {
   }
 
   .pet-stats {
-    flex-basis: 150px;
+    flex-basis: 250px;
   }
 
   .pets {
